--- a/pages/cart.html
+++ b/pages/cart.html
@@ -28,10 +28,10 @@
               <span class="nav-link" id="userName"></span>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link" aria-current="page" href="../pages/home.html">Home</a>
+              <a class="nav-link" aria-current="page" href="./home.html">Home</a>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link" href="../pages/logout.html">Logout</a>
+              <a class="nav-link" href="./logout.html">Logout</a>
             </li>
           </ul>
         </div>
