--- a/pages/home.html
+++ b/pages/home.html
@@ -31,10 +31,10 @@
               <a class="nav-link" aria-current="page" href="../pages/home.html">Home</a>
             </li>
             <li class="nav-item mx-1 cart">
-              <a class="nav-link" href="../pages/cart.html">Cart <span id="cart-count">0</span></a>
+              <a class="nav-link" href="./cart.html">Cart <span id="cart-count">0</span></a>
             </li>
             <li class="nav-item mx-1">
-              <a class="nav-link" href="../pages/logout.html">Logout</a>
+              <a class="nav-link" href="./logout.html">Logout</a>
             </li>
           </ul>
         </div>
